@@ -14,6 +14,8 @@
 package tech.pegasys.teku.networks;
 
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
+import static tech.pegasys.teku.networks.Eth2NetworkConfiguration.FINALIZED_STATE_URL_PATH;
+import static tech.pegasys.teku.networks.Eth2NetworkConfiguration.GENESIS_STATE_URL_PATH;
 
 import java.net.URL;
 import java.util.List;
@@ -40,7 +42,8 @@ public class Eth2NetworkConfigurationTest {
     networkDefinition.configure(networkConfigBuilder);
 
     assertThat(networkConfig.getConstants()).isEqualTo(network.configName());
-    assertThat(networkConfigBuilder.build()).usingRecursiveComparison().isEqualTo(networkConfig);
+    assertThat(networkConfigBuilder.build()).isEqualTo(networkConfig);
+    assertThat(networkConfig.getNetworkBoostrapConfig().isUsingCustomInitialState()).isFalse();
   }
 
   @Test
@@ -49,7 +52,7 @@ public class Eth2NetworkConfigurationTest {
         Eth2NetworkConfiguration.builder("goerli").build();
     final Eth2NetworkConfiguration praterConfig =
         Eth2NetworkConfiguration.builder("prater").build();
-    assertThat(goerliConfig).usingRecursiveComparison().isEqualTo(praterConfig);
+    assertThat(goerliConfig).isEqualTo(praterConfig);
   }
 
   @Test
@@ -74,7 +77,7 @@ public class Eth2NetworkConfigurationTest {
 
   @Test
   public void applyNetworkDefaults_shouldOverwritePreviouslySetValues() {
-    List<Arguments> definedNetworks = getDefinedNetworks().collect(Collectors.toList());
+    List<Arguments> definedNetworks = getDefinedNetworks().toList();
 
     for (Arguments networkA : definedNetworks) {
       for (Arguments networkB : definedNetworks) {
@@ -85,16 +88,15 @@ public class Eth2NetworkConfigurationTest {
         builder.applyNetworkDefaults(networkAName);
         builder.applyNetworkDefaults(networkBName);
 
-        assertThat(builder)
-            .usingRecursiveComparison()
-            .isEqualTo(Eth2NetworkConfiguration.builder(networkBName));
+        assertThat(builder.build())
+            .isEqualTo(Eth2NetworkConfiguration.builder(networkBName).build());
       }
     }
   }
 
   @Test
   public void applyNamedNetworkDefaults_shouldOverwritePreviouslySetValues() {
-    List<Arguments> definedNetworks = getDefinedNetworks().collect(Collectors.toList());
+    List<Arguments> definedNetworks = getDefinedNetworks().toList();
 
     for (Arguments networkA : definedNetworks) {
       for (Arguments networkB : definedNetworks) {
@@ -106,9 +108,8 @@ public class Eth2NetworkConfigurationTest {
         networkBDef.configure(builder);
 
         final Eth2Network networkBName = ((Eth2Network) networkB.get()[0]);
-        assertThat(builder)
-            .usingRecursiveComparison()
-            .isEqualTo(Eth2NetworkConfiguration.builder(networkBName));
+        assertThat(builder.build())
+            .isEqualTo(Eth2NetworkConfiguration.builder(networkBName).build());
       }
     }
   }
@@ -134,6 +135,12 @@ public class Eth2NetworkConfigurationTest {
         Arguments.of(Eth2Network.MAINNET, (NetworkDefinition) b -> b.applyMainnetNetworkDefaults()),
         Arguments.of(Eth2Network.MINIMAL, (NetworkDefinition) b -> b.applyMinimalNetworkDefaults()),
         Arguments.of(Eth2Network.PRATER, (NetworkDefinition) b -> b.applyPraterNetworkDefaults()),
+        Arguments.of(
+            Eth2Network.HOLESKY,
+            (NetworkDefinition) b -> b.applyNetworkDefaults(Eth2Network.HOLESKY)),
+        Arguments.of(
+            Eth2Network.SEPOLIA,
+            (NetworkDefinition) b -> b.applyNetworkDefaults(Eth2Network.SEPOLIA)),
         Arguments.of(Eth2Network.SWIFT, (NetworkDefinition) b -> b.applySwiftNetworkDefaults()),
         Arguments.of(
             Eth2Network.LESS_SWIFT, (NetworkDefinition) b -> b.applyLessSwiftNetworkDefaults()),
@@ -153,5 +160,40 @@ public class Eth2NetworkConfigurationTest {
   @FunctionalInterface
   private interface NetworkDefinition {
     Eth2NetworkConfiguration.Builder configure(Eth2NetworkConfiguration.Builder builder);
+  }
+
+  @Test
+  public void shouldNotHaveCustomInitialStateFlagWhenUsingPreConfiguredNetworks() {
+    final Eth2NetworkConfiguration eth2NetworkConfig =
+        new Eth2NetworkConfiguration.Builder().applyNetworkDefaults(Eth2Network.MAINNET).build();
+    assertThat(eth2NetworkConfig.getNetworkBoostrapConfig().isUsingCustomInitialState()).isFalse();
+  }
+
+  @Test
+  public void shouldHaveCustomInitialStateFlagSetWhenSpecifyingInitialState() {
+    final Eth2NetworkConfiguration eth2NetworkConfig =
+        new Eth2NetworkConfiguration.Builder()
+            .applyNetworkDefaults(Eth2Network.MAINNET)
+            .customInitialState("/foo/bar")
+            .build();
+    assertThat(eth2NetworkConfig.getNetworkBoostrapConfig().getInitialState()).hasValue("/foo/bar");
+    assertThat(eth2NetworkConfig.getNetworkBoostrapConfig().isUsingCustomInitialState()).isTrue();
+  }
+
+  @Test
+  public void shouldSetInitialStateAndGenesisStateWhenUsingCheckpointSyncUrl() {
+    final String checkpointSyncUrl = "http://foo.com";
+    final Eth2NetworkConfiguration eth2NetworkConfig =
+        new Eth2NetworkConfiguration.Builder()
+            .applyNetworkDefaults(Eth2Network.MAINNET)
+            .checkpointSyncUrl(checkpointSyncUrl)
+            .build();
+
+    final StateBoostrapConfig networkBoostrapConfig = eth2NetworkConfig.getNetworkBoostrapConfig();
+    assertThat(networkBoostrapConfig.getInitialState())
+        .contains(checkpointSyncUrl + "/" + FINALIZED_STATE_URL_PATH);
+    assertThat(networkBoostrapConfig.getGenesisState())
+        .contains(checkpointSyncUrl + "/" + GENESIS_STATE_URL_PATH);
+    assertThat(networkBoostrapConfig.isUsingCustomInitialState()).isFalse();
   }
 }
